--- a/category.html
+++ b/category.html
@@ -78,65 +78,30 @@
         </div>
     </header>
 
-    <!-- 상세페이지 -->
-    <div class="sp-bg">
-        <div class="sp-modal">
-            <div class="sp-content">
-                <figure class="sp-pt"></figure><!-- json -->
-                <div class="sp-mini-pt">
-                    <!-- json -->
-                </div>
-                <div class="sp-info">
-                    <div class="sp-info1">
-                    </div><!-- json --> 
-                    <div class="sp-info2">
-                        <div class="sp-pm">
-                            <div class="sum">-</div>
-                            <div>1</div>
-                            <div class="sum">+</div>
-                        </div>
-                        <div class="sp-price"><!-- json -->
-                        </div>
-                    </div>
-                    <div class="total-price">1000원</div>
-                    <div class="sp-bt">
-                        <div class="sp-bt1"><a href="cart.html"><p>구매하기</p></a></div>
-                        <div class="sp-bt2">
-                            <span class="material-icons-outlined">
-                            add_shopping_cart</span></div>
-                        <div class="sp-bt2">
-                            <span class="material-icons-outlined">
-                            favorite</span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-exit">
-            </div>
-        </div>
-    </div>
+    
 
     <!-- 카테고리 -->
     <main>
         <div class="category">
             <div class="category-nav-con">
-                <ol class="category-nav">
+                <ul class="category-nav">
                     <li>
                         <!-- <img src="img/category.png" alt=""> -->
                         <span class="material-icons">
                             category
                             </span>
                     </li>
-                    <li><a href="">DIY미니어처</a></li>
-                    <li><a href="">룸박스/케이스</a></li>
-                    <li><a href="">나무제품</a></li>
-                    <li><a href="">주방용품</a></li>
-                    <li><a href="">가구완제품</a></li>
-                    <li><a href="">소품류</a></li>
-                    <li><a href="">금속제품/조명</a></li>
-                    <li><a href="">천/레이스</a></li>
-                    <li><a href="">벽지/기타재료</a></li>
-                    <li><a href="">핸드메이드</a></li>
-                </ol>
+                    <li><a href="" data-num="0">DIY미니어처</a></li>
+                    <li><a href="" data-num="1">룸박스/케이스</a></li>
+                    <li><a href="" data-num="2">나무제품</a></li>
+                    <li><a href="" data-num="3">주방용품</a></li>
+                    <li><a href="" data-num="4">가구완제품</a></li>
+                    <li><a href="" data-num="5">소품류</a></li>
+                    <li><a href="" data-num="6">금속제품/조명</a></li>
+                    <li><a href="" data-num="7">천/레이스</a></li>
+                    <li><a href="" data-num="8">벽지/기타재료</a></li>
+                    <li><a href="" data-num="9">핸드메이드</a></li>
+                </ul>
             </div>
             <article class="category-list">
                 <select id="category-select">
@@ -181,9 +146,49 @@
                         </form>
                     </div>
                 </div>
+                <!-- 상세페이지 -->
+                <div class="sp-bg">
+                    <div class="sp-modal">
+                        <div class="sp-content">
+                            <figure class="sp-pt"></figure><!-- json -->
+                            <div class="sp-mini-pt">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <!-- json -->
+                            </div>
+                            <div class="sp-info">
+                                <div class="sp-info1">
+                                </div><!-- json --> 
+                                <div class="sp-info2">
+                                    <div class="sp-pm">
+                                        <div class="sum">-</div>
+                                        <div>1</div>
+                                        <div class="sum">+</div>
+                                    </div>
+                                    <div class="sp-price"><!-- json -->
+                                    </div>
+                                </div>
+                                <div class="total-price"></div>
+                                <div class="sp-bt">
+                                    <div class="sp-bt1"><a href="cart.html"><p>구매하기</p></a></div>
+                                    <div class="sp-bt2">
+                                        <span class="material-icons-outlined">
+                                        add_shopping_cart</span></div>
+                                    <div class="sp-bt2 like-bt">
+                                        <span class="material-icons-outlined">
+                                        favorite</span></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-exit">
+                        </div>
+                    </div>
+                </div>
                 <div class="category-item-cons">
-                    <!-- category.json -->
-                </div> 
+                    <!-- json -->
+                    
+                </div>
                 <div class="pages">
                     <a href="">&lt;</a> 
                     <a href="">1</a> 
