--- a/category.html
+++ b/category.html
@@ -118,33 +118,12 @@
                 </select>
                 <label for="category-select">category</label>
                 <div class="category-header">
-                    <div><h2>나무제품</h2></div>
-                    <div>
-                        <div class="size-search">
-                            <span>SIZE</span>
-                            <div>
-                                <input type="radio" name="size" id="size-all" checked>
-                                <label for="size-all"><span>ALL</span></label>
-                            </div>
-                            <div>
-                                <input type="radio" name="size" id="size-L">
-                                <label for="size-L"><span>L</span></label>
-                            </div>
-                            <div>
-                                <input type="radio" name="size" id="size-M">
-                                <label for="size-M"><span>M</span></label>
-                            </div>
-                            <div>
-                                <input type="radio" name="size" id="size-S">
-                                <label for="size-S"><span>S</span></label>
-                            </div>
-                        </div>
-                        <form class="category-search">
-                            <input type="search" id="search">
-                            <label for="search">search</label>
-                            <input type="submit" value="search" class="material-icons">
-                        </form>
-                    </div>
+                    <h2>모든 상품</h2>
+                    <form class="category-search">
+                        <input type="search" id="search">
+                        <label for="search">search</label>
+                        <input type="submit" value="search" class="material-icons">
+                    </form>
                 </div>
                 <!-- 상세페이지 -->
                 <div class="sp-bg">
@@ -172,7 +151,7 @@
                                 <div class="total-price"></div>
                                 <div class="sp-bt">
                                     <div class="sp-bt1"><a href="cart.html"><p>구매하기</p></a></div>
-                                    <div class="sp-bt2">
+                                    <div class="sp-bt2 cart-bt">
                                         <span class="material-icons-outlined">
                                         add_shopping_cart</span></div>
                                     <div class="sp-bt2 like-bt">
