--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="js/index.js" defer></script>
 </head>
 <body>
-   
+    
     <!-- HEADER, login -->
     <header class="header-1">
         <div>
@@ -118,13 +118,13 @@
                 <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt="insta"></a></li>
                 <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt="kakao"></a></li>
             </ul>
-            <div class="sns-hidden">▶</div>
+            <div class="sns-hidden">HIDE▶</div>
         </div>
         <div class="sns-show handle-hidden">◀</div>
 
         <!-- NEW -->
         <article class="new-list">
-            <figure class="new-big new-figure">
+            <figure class="new-big new-figure scroll-effect">
                 <img src="img/new1.jpg" alt="new1">
                 <div class="list-title">
                     <span class="list-title1">NEW</span>
@@ -138,7 +138,7 @@
                 </figcaption>
             </figure>
             <div class="new-small">
-                <figure class="new-small1 new-figure">
+                <figure class="new-small1 new-figure scroll-effect">
                     <img src="img/new2.jpg" alt="new2">
                     <figcaption>
                         <h2>앤틱<br>서랍장</h2>
@@ -147,7 +147,7 @@
                         </p>
                     </figcaption>
                 </figure>
-                <figure class="new-small2 new-figure">
+                <figure class="new-small2 new-figure scroll-effect">
                     <img src="img/new3.jpg" alt="new3">
                     <figcaption>
                         <h2>귀여운<br>토끼침대</h2>
@@ -160,7 +160,7 @@
         </article>
 
         <!-- ONSALE -->
-        <article class="onsale-list">
+        <article class="onsale-list scroll-effect">
             <h2 class="list-title">
                 <span class="list-title1">ON SALE</span>
                 <span class="list-title2">할인상품</span>
@@ -170,32 +170,36 @@
         
         <!-- BANNER -->
         <a href="category.html">
-            <article class="banner">
+            <article class="banner scroll-effect">
                 <div class="banner-txt">
                     미니데코에서만 만날 수 있는 특별한 상품
                 </div>
-                <div class="banner-gom">
+                <div class="banner-gom scroll-effect">
                     <img src="img/gom.png" alt="banner1" width="265px">
                 </div>
             </article>
         </a>
 
         <!-- SPECIAL -->
-        <div class="special-slide">
-        <div>
-            <span class="list-title1">SPECIAL</span>
-            <span class="list-title2">특별한 상품</span>
-        </div>
-        <div class="slide-left">왼쪽</div>
-        <div class="slide-right">오른쪽</div>
-        <article class="special-list">
-            <!-- index.json -->
-        </article>
+        <div class="special-slide scroll-effect">
+            <div>
+                <span class="list-title1">SPECIAL</span>
+                <span class="list-title2">특별한 상품</span>
+            </div>
+            <div class="slide-left"><span class="material-icons-outlined">
+                arrow_back_ios
+                </span></div>
+            <div class="slide-right"><span class="material-icons-outlined">
+                arrow_forward_ios
+                </span></div>
+            <article class="special-list">
+                <!-- index.json -->
+            </article>
         </div>
 
         <!-- BEST -->
         <article class="best">
-            <div class="best-category">
+            <div class="best-category scroll-effect">
                 <ul class="best-category-list">
                     <li><h2>CATEGORY</h2></li>
                     <li><a href="" alt="" data-num="0">DIY미니어처</a></li>
@@ -210,7 +214,7 @@
                     <li><a href="" alt="" data-num="9">핸드메이드</a></li>
                 </ul>
             </div>
-            <div class="best-list">
+            <div class="best-list scroll-effect">
                 <div class="list-title-best">
                     <span class="list-title1">BEST</span>
                     <span class="list-title2">인기상품</span>
@@ -232,10 +236,11 @@
                 </div>
                 <!-- index.json -->
             </div>
+            <a class="moreView" href="category.html">더 보기 ></a>
         </article>
 
         <!-- REVIEW -->
-        <article class="review-list">
+        <article class="review-list scroll-effect">
             <div class="list-title">
                 <span class="list-title1">REVIEW</span>
                 <span class="list-title2">상품후기</span>
