--- a/cart.html
+++ b/cart.html
@@ -33,48 +33,19 @@
                         MYPAGE
                         <ul class="dropdown2">
                             <li><a href="cart.html">cart</a></li>
-                            <li><a href="myinfo.html">my info</a></li>
+                            <li><a href="login.html">my info</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="menu-2">
-                    <li>
-                        <input type="radio" id="login" name="login-signup">
-                        <div class="login-bg">
-                            <div class="login-modal">
-                                <input type="radio" id="exit" name="login-signup">
-                                <label for="exit"><span>끄기</span></label>
-                                <div class="login-con">
-                                    <div>
-                                        <h2>LOGIN</h2>
-                                        <span>회원로그인</span>
-                                    </div>
-                                    <form class="login-form">
-                                        <div>
-                                            <label for="id">id</label>
-                                            <input type="text" id="id" placeholder="아이디">
-                                            <label for="pw">password</label>
-                                            <input type="password" id="pw" placeholder="패스워드">
-                                        </div>
-                                        <div>
-                                            <input type="submit" id="sm" value="로그인">
-                                        </div>
-                                    </form>
-                                    <div>
-                                        <a href="signup.html" target="_blank"><span>회원가입 </span></a>
-                                        <span>아이디/비밀번호 찾기</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <label for="login">로그인</label>
-                    </li>
-                    <li><a href="signup.html" target="_blank">회원가입</a></label></li>
+                    <li><a href="login.html">로그인</a></li>
+                    <li><a href="signup.html">회원가입</a></li>
                     <li><a href="">즐겨찾기</a></li>
                 </ul>
             </div>
         </div>
     </header>
+
 
 <!-- 목록 -->
 
