--- a/notice.html
+++ b/notice.html
@@ -9,74 +9,42 @@
     <script src="js/community.js" defer></script>
 </head>
 <body>
-    <main>
-        <header class="header-1">
-            <input type="checkbox" id="burger" checked>
-            <label for="burger"><span>버거</span></label>
-            <div class="header-2">
-                <div class="header-3">
-                    <h1 class="logo">
-                        <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
-                    </h1>
-                    <ul class="menu-1">
-                        <li><a href="category.html">CATEGORY</a></li>
-                        <li>
-                            COMMUNITY
-                            <ul class="dropdown1">
-                                <li><a href="notice.html">notice</a></li>
-                                <li><a href="review.html">review</a></li>
-                                <li><a href="qna.html">Q&A</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            MYPAGE
-                            <ul class="dropdown2">
-                                <li><a href="cart.html">cart</a></li>
-                                <li><a href="myinfo.html">my info</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="menu-2">
-                        <li>
-                            <input type="radio" id="login" name="login-signup">
-                            <div class="login-bg">
-                                <div class="login-modal">
-                                    <input type="radio" id="exit" name="login-signup">
-                                    <label for="exit"><span>끄기</span></label>
-                                    <div class="login-con">
-                                        <div>
-                                            <h2>LOGIN</h2>
-                                            <span>회원로그인</span>
-                                        </div>
-                                        <form class="login-form">
-                                            <div>
-                                                <label for="id">id</label>
-                                                <input type="text" id="id" placeholder="아이디">
-                                                <label for="pw">password</label>
-                                                <input type="password" id="pw" placeholder="패스워드">
-                                            </div>
-                                            <div>
-                                                <input type="submit" id="sm" value="로그인">
-                                            </div>
-                                        </form>
-                                        <div>
-                                            <a href="signup.html" target="_blank"><span>회원가입 </span></a>
-                                            <span>아이디/비밀번호 찾기</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <label for="login">로그인</label>
-                        </li>
-                        <li><a href="signup.html" target="_blank">회원가입</a></label></li>
-                        <li><a href="">즐겨찾기</a></li>
-                    </ul>
-                </div>
-            </div>
-        </header>
     
-        
-
+    <header class="header-1">
+        <input type="checkbox" id="burger" checked>
+        <label for="burger"><span>버거</span></label>
+        <div class="header-2">
+            <div class="header-3">
+                <h1 class="logo">
+                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
+                </h1>
+                <ul class="menu-1">
+                    <li><a href="category.html">CATEGORY</a></li>
+                    <li>
+                        COMMUNITY
+                        <ul class="dropdown1">
+                            <li><a href="notice.html">notice</a></li>
+                            <li><a href="review.html">review</a></li>
+                            <li><a href="qna.html">Q&A</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        MYPAGE
+                        <ul class="dropdown2">
+                            <li><a href="cart.html">cart</a></li>
+                            <li><a href="login.html">my info</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="menu-2">
+                    <li><a href="login.html">로그인</a></li>
+                    <li><a href="signup.html">회원가입</a></li>
+                    <li><a href="">즐겨찾기</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main>
         <table class="board-tb">
             <caption class="board-cap">NOTICE</caption>
             <thead>
