--- a/login.html
+++ b/login.html
@@ -6,41 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minideco</title>
     <link rel="stylesheet" href="css/login.css">
+    <script src="js/includeHTML.js"></script>
 </head>
 <body>
-    <header class="header-1">
-        <input type="checkbox" id="burger" checked>
-        <label for="burger"><span>버거</span></label>
-        <div class="header-2">
-            <div class="header-3">
-                <h1 class="logo">
-                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
-                </h1>
-                <ul class="menu-1">
-                    <li><a href="category.html">CATEGORY</a></li>
-                    <li>
-                        COMMUNITY
-                        <ul class="dropdown1">
-                            <li><a href="notice.html">notice</a></li>
-                            <li><a href="review.html">review</a></li>
-                            <li><a href="qna.html">Q&A</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        MYPAGE
-                        <ul class="dropdown2">
-                            <li><a href="cart.html">cart</a></li>
-                            <li><a href="login.html">my info</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="menu-2">
-                    <li><a href="login.html">로그인</a></li>
-                    <li><a href="signup.html">회원가입</a></li>
-                    <li><a href="">즐겨찾기</a></li>
-                </ul>
-            </div>
-        </div>
+    <header class="header-1" include-html="partial/header.html">
     </header>
 
     <div class="login-con">
@@ -65,14 +34,10 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footer1">
-            <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
-        </div>
-        <div class="footer2">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
-        </div>
+    <footer include-html="partial/footer.html">
     </footer>
-
+    <script>
+        includeHTML();
+    </script>
 </body>
 </html>
